Factory method pattern

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /PizzaStore/PizzaStore/bin/Debug/net7.0
 /PizzaStore/PizzaStore/obj/Debug/net7.0
 /PizzaStore/PizzaStore/obj
+/PizzaStore/.vs/PizzaStore/FileContentIndex/*.vsidx
